# SelfId-Auth-Fluence

./: README.html  README.md
services/auth/: Cargo.toml  info
services/auth/artifacts/: auth_service.wasm
services/auth/configs/: add_service_cfg.json  app_config.json  auth_service_cfg.json
services/auth/scripts/: aqua_to_ts.sh  build.sh  deploy.sh
services/auth/src/: api.rs  main.rs  results.rs
services/greeting/: info  repl_config.toml
services/greeting/scripts/: deploy.sh
services/greeting/src/: main.rs
web/: .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/aqua/: auth.aqua  greeting.aqua
web/src/: App.vue  config.ts  main.js  routes.js
web/src/_aqua/: auth.ts  greeting.ts
web/src/common/: mixinViews.js
web/src/components/: TopMenu.vue
web/src/selfId/: index.js
web/src/store/: index.js
web/src/views/: Index.vue  Permission.vue
