[package]
name = "auth_service"
version = "0.1.0"
authors = ["fsy412"]
description = "add service"
edition = "2018"
publish = false

[[bin]]
name = "auth_service"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.11"
once_cell = "1.4.1"
parking_lot = "0.11.1"

[dev-dependencies]
marine-rs-sdk-test = "0.2.0"
